Performance tests for different GCs: add new cases with different parameters (ZUncommit, UseLargePages, UseTransparentHugePages)
GitOrigin-RevId: 523db9b2694e9a6cb591ab68028feb45ae2751c3